Implementación del DbContext y migraciones iniciales para la base de datos

--- a/portafolio.backend/portafolio.backend.API/appsettings.json
+++ b/portafolio.backend/portafolio.backend.API/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=PORTAFOLIO;TrustServerCertificate=True; User Id=user_portafolio;Password=Pass.1234;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
