--- a/portafolio.backend/portafolio.backend.API/portafolio.backend.API.csproj
+++ b/portafolio.backend/portafolio.backend.API/portafolio.backend.API.csproj
@@ -7,7 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Contexto\Migraciones\" />
+    <Folder Include="Contexto\Repositorios\" />
+    <Folder Include="Dominio\Entidades\" />
+    <Folder Include="Dominio\DTOs\" />
+    <Folder Include="Utilidades\" />
+    <Folder Include="Servicios\" />
   </ItemGroup>
 
 </Project>
