--- a/portafolio.backend/portafolio.backend.API/portafolio.backend.API.csproj
+++ b/portafolio.backend/portafolio.backend.API/portafolio.backend.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.16" />
@@ -19,11 +20,6 @@
 
   <ItemGroup>
     <Folder Include="Contexto\Migraciones\" />
-    <Folder Include="Contexto\Repositorios\" />
-    <Folder Include="Dominio\Entidades\" />
-    <Folder Include="Dominio\DTOs\" />
-    <Folder Include="Utilidades\" />
-    <Folder Include="Servicios\" />
   </ItemGroup>
 
 </Project>
