backend: Endpoint GET para educación

--- a/portafolio.backend/portafolio.backend.API/portafolio.backend.API.csproj
+++ b/portafolio.backend/portafolio.backend.API/portafolio.backend.API.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Contexto\Migraciones\" />
+    <Folder Include="Dominio\DTOs\Educacion\" />
   </ItemGroup>
 
 </Project>
