backend: Endpoint Get para empleos

--- a/portafolio.backend/portafolio.backend.API/portafolio.backend.API.csproj
+++ b/portafolio.backend/portafolio.backend.API/portafolio.backend.API.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <Folder Include="Contexto\Migraciones\" />
     <Folder Include="Dominio\DTOs\Educacion\" />
+    <Folder Include="Dominio\DTOs\Empleo\" />
   </ItemGroup>
 
 </Project>
