--- a/portafolio.backend/portafolio.backend.API/portafolio.backend.API.csproj
+++ b/portafolio.backend/portafolio.backend.API/portafolio.backend.API.csproj
@@ -22,6 +22,7 @@
     <Folder Include="Contexto\Migraciones\" />
     <Folder Include="Dominio\DTOs\Educacion\" />
     <Folder Include="Dominio\DTOs\Empleo\" />
+    <Folder Include="Dominio\DTOs\RedSocialContacto\" />
   </ItemGroup>
 
 </Project>
